<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnPrimary"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:tag="skip">

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/one" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/two" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/three" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/four" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/five" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/six" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seven" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/summa" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/place" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/member_one" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/one" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?colorOnSecondary"
            android:gravity="center" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"

            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="score" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="place" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/member_two" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/two" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?colorOnSecondary"
            android:gravity="center" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="score" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="place" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/member_three" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/three" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?colorOnSecondary"
            android:gravity="center" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="score" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="place" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/member_four" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/four" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?colorOnSecondary"
            android:gravity="center" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="score" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="place" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/member_five_" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/five" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?colorOnSecondary"
            android:gravity="center" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="score" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="place" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/member_six" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/six" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?colorOnSecondary" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="score" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="place" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/member_seven" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seven" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <EditText
            style="@style/Theme.TestTask.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?colorOnSecondary"
            android:gravity="center" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="score" />

        <TextView
            style="@style/Theme.TestTask.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="place" />
    </TableRow>
</TableLayout>